--- a/package.json
+++ b/package.json
@@ -200,11 +200,11 @@
     "@kbn/alerting-example-plugin": "link:x-pack/examples/alerting_example",
     "@kbn/alerting-fixture-plugin": "link:x-pack/platform/test/functional_with_es_ssl/plugins/alerts",
     "@kbn/alerting-plugin": "link:x-pack/platform/plugins/shared/alerting",
-    "@kbn/alerting-rule-schemas": "link:x-pack/platform/packages/shared/kbn-alerting-rule-schemas",
     "@kbn/alerting-rule-utils": "link:x-pack/platform/packages/shared/alerting-rule-utils",
     "@kbn/alerting-state-types": "link:x-pack/platform/packages/private/kbn-alerting-state-types",
     "@kbn/alerting-types": "link:src/platform/packages/shared/kbn-alerting-types",
     "@kbn/alerting-v2-plugin": "link:x-pack/platform/plugins/shared/alerting_v2",
+    "@kbn/alerting-v2-schemas": "link:x-pack/platform/packages/shared/kbn-alerting-v2-schemas",
     "@kbn/alerts-as-data-utils": "link:src/platform/packages/shared/kbn-alerts-as-data-utils",
     "@kbn/alerts-grouping": "link:x-pack/solutions/observability/packages/kbn-alerts-grouping",
     "@kbn/alerts-restricted-fixtures-plugin": "link:x-pack/platform/test/alerting_api_integration/common/plugins/alerts_restricted",
