--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -78,8 +78,6 @@
       "@kbn/alerting-fixture-plugin/*": ["x-pack/platform/test/functional_with_es_ssl/plugins/alerts/*"],
       "@kbn/alerting-plugin": ["x-pack/platform/plugins/shared/alerting"],
       "@kbn/alerting-plugin/*": ["x-pack/platform/plugins/shared/alerting/*"],
-      "@kbn/alerting-rule-schemas": ["x-pack/platform/packages/shared/kbn-alerting-rule-schemas"],
-      "@kbn/alerting-rule-schemas/*": ["x-pack/platform/packages/shared/kbn-alerting-rule-schemas/*"],
       "@kbn/alerting-rule-utils": ["x-pack/platform/packages/shared/alerting-rule-utils"],
       "@kbn/alerting-rule-utils/*": ["x-pack/platform/packages/shared/alerting-rule-utils/*"],
       "@kbn/alerting-state-types": ["x-pack/platform/packages/private/kbn-alerting-state-types"],
@@ -88,6 +86,8 @@
       "@kbn/alerting-types/*": ["src/platform/packages/shared/kbn-alerting-types/*"],
       "@kbn/alerting-v2-plugin": ["x-pack/platform/plugins/shared/alerting_v2"],
       "@kbn/alerting-v2-plugin/*": ["x-pack/platform/plugins/shared/alerting_v2/*"],
+      "@kbn/alerting-v2-schemas": ["x-pack/platform/packages/shared/kbn-alerting-v2-schemas"],
+      "@kbn/alerting-v2-schemas/*": ["x-pack/platform/packages/shared/kbn-alerting-v2-schemas/*"],
       "@kbn/alerts-as-data-utils": ["src/platform/packages/shared/kbn-alerts-as-data-utils"],
       "@kbn/alerts-as-data-utils/*": ["src/platform/packages/shared/kbn-alerts-as-data-utils/*"],
       "@kbn/alerts-grouping": ["x-pack/solutions/observability/packages/kbn-alerts-grouping"],
