--- a/x-pack/platform/packages/shared/kbn-alerting-v2-schemas/package.json
+++ b/x-pack/platform/packages/shared/kbn-alerting-v2-schemas/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@kbn/alerting-rule-schemas",
-  "description": "Alerting rule request Zod schemas and shared types.",
+  "name": "@kbn/alerting-v2-schemas",
+  "description": "Alerting v2 request Zod schemas and shared types.",
   "private": true,
   "version": "1.0.0",
   "license": "Elastic License 2.0 OR AGPL-3.0-only OR SSPL-1.0",
