--- a/x-pack/platform/plugins/shared/fleet/cypress/tsconfig.json
+++ b/x-pack/platform/plugins/shared/fleet/cypress/tsconfig.json
@@ -2,10 +2,7 @@
   "extends": "@kbn/tsconfig-base/tsconfig.json",
   "include": [
     "**/*",
-    "./cypress.config.ts",
-    "./cypress.config.space_awareness.ts",
-    "./cypress_ci.config.ts",
-    "./cypress_ci.config.space_awareness.ts"
+    "../../../../../../typings/**/*"
   ],
   "exclude": [
     "target/**/*"
