[ResponseOps] Alerting V2 schema package  (#250023)
## Summary

Moves rule schemas to a package 

### Checklist

- [ ] [Unit or functional
tests](https://www.elastic.co/guide/en/kibana/master/development-tests.html)
were updated or added to match the most common scenarios

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>

--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -28,14 +28,15 @@
     "@kbn/core-di-server",
     "@kbn/esql-utils",
     "@kbn/response-ops-retry-service",
-    "@kbn/esql-language",
     "@kbn/core-http-server-mocks",
     "@kbn/core-security-common",
     "@kbn/core-elasticsearch-server-mocks",
     "@kbn/logging-mocks",
     "@kbn/core-elasticsearch-client-server-mocks",
     "@kbn/es-errors",
+    "@kbn/alerting-v2-schemas",
     "@kbn/zod",
+    "@kbn/zod-helpers",
     "@kbn/core-di-internal"
   ],
   "exclude": [
