--- a/x-pack/solutions/observability/plugins/observability/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/observability/tsconfig.json
@@ -147,6 +147,7 @@
     "@kbn/management-settings-ids",
     "@kbn/observability-agent-builder-plugin",
     "@kbn/kql",
+    "@kbn/shared-ux-utility",
   ],
   "exclude": ["target/**/*"]
 }
