Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/solutions/observability/plugins/infra/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/infra/tsconfig.json
@@ -131,7 +131,8 @@
     "@kbn/deeplinks-analytics",
     "@kbn/esql-composer",
     "@kbn/fleet-plugin",
-    "@kbn/observability-agent-builder-plugin"
+    "@kbn/observability-agent-builder-plugin",
+    "@kbn/presentation-publishing"
   ],
   "exclude": ["target/**/*"]
 }
