--- a/.buildkite/pipelines/pull_request/only_test.yml
+++ b/.buildkite/pipelines/pull_request/only_test.yml
@@ -7,8 +7,7 @@ steps:
     timeout_in_minutes: 10
     env:
       JEST_CONFIGS_DEPS: ''
-      LIMIT_CONFIG_TYPE: unit
-      JEST_CONFIG_GLOB: '**/packages/kbn-plugin-helpers/jest.integration.config.js'
+      LIMIT_CONFIG_TYPE: integration
       JEST_UNIT_SCRIPT: '.buildkite/scripts/steps/test/jest.sh'
       JEST_INTEGRATION_SCRIPT: '.buildkite/scripts/steps/test/jest_integration.sh'
       FTR_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/ftr_configs.sh'
