--- a/x-pack/platform/plugins/shared/fleet/tsconfig.json
+++ b/x-pack/platform/plugins/shared/fleet/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "target/types"
   },
-  "exclude": ["cypress.config.ts", "cypress.config.space_awareness.ts", "cypress_ci.config.ts", "cypress_ci.config.space_awareness.ts", "target/**/*"],
+  "exclude": ["target/**/*"],
   "include": [
     // add all the folders containing files to be compiled
     ".storybook/**/*",
@@ -14,10 +14,6 @@
     "server/**/*.json",
     "scripts/**/*",
     "package.json",
-    "cypress.config.ts",
-    "cypress.config.space_awareness.ts",
-    "cypress_ci.config.ts",
-    "cypress_ci.config.space_awareness.ts",
     "../../../../../typings/**/*",
     "test/scout/**/*"
   ],
@@ -132,6 +128,6 @@
     "@kbn/react-query",
     "@kbn/fs",
     "@kbn/kql",
-    "@kbn/scout",
+    "@kbn/scout"
   ]
 }
