Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/solutions/security/packages/features/tsconfig.json
+++ b/x-pack/solutions/security/packages/features/tsconfig.json
@@ -18,6 +18,7 @@
     "@kbn/securitysolution-rules",
     "@kbn/securitysolution-list-constants",
     "@kbn/elastic-assistant-common",
+    "@kbn/data-views-plugin",
   ],
   "exclude": ["target/**/*"]
 }
