Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/security/packages/features/moon.yml
+++ b/x-pack/solutions/security/packages/features/moon.yml
@@ -26,6 +26,7 @@ dependsOn:
   - '@kbn/securitysolution-rules'
   - '@kbn/securitysolution-list-constants'
   - '@kbn/elastic-assistant-common'
+  - '@kbn/data-views-plugin'
 tags:
   - shared-common
   - package
