--- a/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
@@ -8,21 +8,9 @@
     "id": "dashboardAgent",
     "server": true,
     "browser": true,
-    "configPath": [
-      "xpack",
-      "dashboardAgent"
-    ],
-    "requiredPlugins": [
-      "agentBuilder",
-      "agentBuilderPlatform",
-      "dashboard"
-    ],
-    "optionalPlugins": [
-      "share",
-      "spaces"
-    ],
-    "requiredBundles": [
-      "data"
-    ]
+    "configPath": ["xpack", "dashboardAgent"],
+    "requiredPlugins": ["agentBuilder", "agentBuilderPlatform", "dashboard"],
+    "optionalPlugins": ["share", "spaces"],
+    "requiredBundles": ["data"]
   }
 }
