no need for dashboardLocator/spaces now

--- a/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
@@ -10,7 +10,7 @@
     "browser": true,
     "configPath": ["xpack", "dashboardAgent"],
     "requiredPlugins": ["agentBuilder", "agentBuilderPlatform", "dashboard"],
-    "optionalPlugins": ["share", "spaces"],
+    "optionalPlugins": ["share"],
     "requiredBundles": ["data"]
   }
 }
