[impl] `table` Content List Table component
Implement a table component built on `EuiBasicTable` that integrates with `ContentListProvider` for data, sorting, and configuration. Supports a declarative column API using the assembly pattern from `@kbn/content-list-assembly`.

--- a/src/platform/packages/shared/content-management/content_list/kbn-content-list-table/tsconfig.json
+++ b/src/platform/packages/shared/content-management/content_list/kbn-content-list-table/tsconfig.json
@@ -21,6 +21,10 @@
     "**/*.tsx"
   ],
   "kbn_references": [
+    "@kbn/content-list-assembly",
+    "@kbn/content-list-provider",
+    "@kbn/content-list-mock-data",
+    "@kbn/i18n",
   ],
   "exclude": [
     "target/**/*"
