feat(security, uiam): add support for the secondary client UIAM authentication

--- a/src/core/packages/security/server/tsconfig.json
+++ b/src/core/packages/security/server/tsconfig.json
@@ -10,6 +10,7 @@
     "@kbn/core-security-common",
     "@kbn/core-http-server",
     "@kbn/logging",
-    "@kbn/core-elasticsearch-server"
+    "@kbn/core-elasticsearch-server",
+    "@kbn/core"
   ]
 }
