--- a/src/core/packages/security/server/moon.yml
+++ b/src/core/packages/security/server/moon.yml
@@ -22,6 +22,7 @@ dependsOn:
   - '@kbn/core-http-server'
   - '@kbn/logging'
   - '@kbn/core-elasticsearch-server'
+  - '@kbn/core'
 tags:
   - shared-server
   - package
