[impl] `toolbar`: Content List Toolbar component
Implement a toolbar component built on `EuiSearchBar` that integrates with `ContentListProvider` for configuration and sort state. Uses the assembly pattern from `@kbn/content-list-assembly` for declarative filter configuration.

--- a/src/platform/packages/shared/content-management/content_list/kbn-content-list-toolbar/tsconfig.json
+++ b/src/platform/packages/shared/content-management/content_list/kbn-content-list-toolbar/tsconfig.json
@@ -24,5 +24,9 @@
     "target/**/*"
   ],
   "kbn_references": [
+    "@kbn/content-list-assembly",
+    "@kbn/content-list-provider",
+    "@kbn/content-list-mock-data",
+    "@kbn/i18n",
   ]
 }
