--- a/package.json
+++ b/package.json
@@ -1333,6 +1333,7 @@
     "fast-deep-equal": "3.1.3",
     "fastest-levenshtein": "1.0.16",
     "file-saver": "2.0.5",
+    "flat": "^5.0.2",
     "formik": "2.4.6",
     "fp-ts": "2.16.11",
     "fuse.js": "7.1.0",
@@ -1846,6 +1847,7 @@
     "@types/extract-zip": "2.0.3",
     "@types/fetch-mock": "7.3.1",
     "@types/file-saver": "2.0.7",
+    "@types/flat": "^5.0.5",
     "@types/flot": "0.0.31",
     "@types/geojson": "7946.0.10",
     "@types/getos": "3.0.4",
