Fix formatting in tsconfig.json

--- a/x-pack/solutions/observability/plugins/observability_agent_builder/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/observability_agent_builder/tsconfig.json
@@ -45,7 +45,7 @@
     "@kbn/sse-utils-server",
     "@kbn/kibana-utils-plugin",
     "@kbn/server-route-repository-client",
-    "@kbn/core-analytics-browser"
+    "@kbn/core-analytics-browser",
     "@kbn/apm-types"
   ],
   "exclude": ["target/**/*"]
