Fix ES casing in docs
Co-authored-by: Dima Arnautov <arnautov.dima@gmail.com>

--- a/docs/settings-gen/source/kibana-alert-action-settings.yml
+++ b/docs/settings-gen/source/kibana-alert-action-settings.yml
@@ -2610,7 +2610,7 @@ groups:
         default: es
         options:
           - option: es
-            description: ElasticSearch api key
+            description: Elasticsearch API key
           - option: uiam
             description: UIAM api key
         applies_to:
