--- a/x-pack/platform/plugins/shared/agent_builder/tsconfig.json
+++ b/x-pack/platform/plugins/shared/agent_builder/tsconfig.json
@@ -100,6 +100,7 @@
     "@kbn/alerts-ui-shared",
     "@kbn/triggers-actions-ui-plugin",
     "@kbn/home-plugin",
-    "@kbn/data-plugin"
+    "@kbn/data-plugin",
+    "@kbn/security-plugin"
   ]
 }
