--- a/x-pack/platform/plugins/shared/agent_builder/moon.yml
+++ b/x-pack/platform/plugins/shared/agent_builder/moon.yml
@@ -105,6 +105,7 @@ dependsOn:
   - '@kbn/triggers-actions-ui-plugin'
   - '@kbn/home-plugin'
   - '@kbn/data-plugin'
+  - '@kbn/security-plugin'
 tags:
   - plugin
   - prod
