introduce form view, sync with yaml view

--- a/x-pack/platform/plugins/shared/alerting_v2/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/alerting_v2/kibana.jsonc
@@ -14,6 +14,7 @@
       "features",
       "spaces",
       "data",
+      "dataViews",
       "security"
     ],
     "optionalPlugins": ["management"],
