add breadcrumbs and switch to esql editor

--- a/x-pack/platform/plugins/shared/alerting_v2/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/alerting_v2/kibana.jsonc
@@ -15,7 +15,8 @@
       "spaces",
       "data",
       "dataViews",
-      "security"
+      "security",
+      "esql"
     ],
     "optionalPlugins": ["management"],
     "extraPublicDirs": []
