--- a/.buildkite/pipelines/pull_request/ftr_bench.yml
+++ b/.buildkite/pipelines/pull_request/ftr_bench.yml
@@ -2,7 +2,7 @@ steps:
   - command: .buildkite/scripts/steps/ftr_bench.sh
     label: 'FTR Bench'
     agents:
-      machineType: c2d-standard-16
+      machineType: n4d-standard-16
       zones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 200
     key: ftr_bench
