--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -6,8 +6,6 @@ steps:
     agents:
       machineType: n2-standard-2
 
-  - wait
-
   - command: .buildkite/scripts/steps/store_cache.sh
     label: Store Cache for build
     timeout_in_minutes: 10
@@ -27,6 +25,7 @@ steps:
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 200
     key: build
+    depends_on: pre_build
     if: "build.env('KIBANA_BUILD_ID') == null || build.env('KIBANA_BUILD_ID') == ''"
     timeout_in_minutes: 90
     retry:
@@ -42,6 +41,7 @@ steps:
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
     key: quick_checks
+    depends_on: pre_build
     timeout_in_minutes: 60
     retry:
       automatic:
@@ -50,12 +50,13 @@ steps:
 
   - command: .buildkite/scripts/steps/checks.sh
     label: 'Checks'
-    key: checks
     agents:
       machineType: n2-standard-2
       preemptible: true
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
+    key: checks
+    depends_on: pre_build
     timeout_in_minutes: 60
     retry:
       automatic:
@@ -70,6 +71,7 @@ steps:
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
     key: linting
+    depends_on: pre_build
     timeout_in_minutes: 60
     retry:
       automatic:
@@ -84,6 +86,7 @@ steps:
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
     key: linting_with_types
+    depends_on: pre_build
     timeout_in_minutes: 60
     retry:
       automatic:
@@ -97,6 +100,7 @@ steps:
       preemptible: true
       spotZones: us-central1-f,us-central1-c,us-central1-a
     key: check_oas_snapshot
+    depends_on: pre_build
     timeout_in_minutes: 60
     retry:
       automatic:
@@ -112,6 +116,7 @@ steps:
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 105
     key: check_types
+    depends_on: pre_build
     timeout_in_minutes: 60
     retry:
       automatic:
