--- a/.buildkite/pipelines/pull_request/base_merged_phases.yml
+++ b/.buildkite/pipelines/pull_request/base_merged_phases.yml
@@ -4,11 +4,10 @@ steps:
     agents:
       machineType: c3d-standard-16-lssd
       zones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      diskSizeGb: 200
     key: build
     if: "build.env('KIBANA_BUILD_ID') == null || build.env('KIBANA_BUILD_ID') == ''"
     timeout_in_minutes: 90
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
@@ -19,11 +18,10 @@ steps:
     agents:
       machineType: n2-highcpu-8
       preemptible: true
-      diskSizeGb: 115
+      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      diskSizeGb: 105
     key: quick_checks
     timeout_in_minutes: 60
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
@@ -35,10 +33,9 @@ steps:
     agents:
       machineType: n2-standard-2
       preemptible: true
-      diskSizeGb: 115
+      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      diskSizeGb: 105
     timeout_in_minutes: 60
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
@@ -48,12 +45,11 @@ steps:
     label: 'Linting'
     agents:
       machineType: n2-standard-16
+      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
       preemptible: true
-      diskSizeGb: 115
+      diskSizeGb: 105
     key: linting
     timeout_in_minutes: 60
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
@@ -64,11 +60,10 @@ steps:
     agents:
       machineType: n2-standard-32
       preemptible: true
-      diskSizeGb: 115
+      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      diskSizeGb: 105
     key: linting_with_types
     timeout_in_minutes: 60
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
@@ -79,10 +74,9 @@ steps:
     agents:
       machineType: n2-standard-4
       preemptible: true
+      spotZones: us-central1-f,us-central1-c,us-central1-a
     key: check_oas_snapshot
     timeout_in_minutes: 60
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
@@ -95,11 +89,9 @@ steps:
       diskType: hyperdisk-balanced
       preemptible: true
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
-      diskSizeGb: 115
+      diskSizeGb: 105
     key: check_types
     timeout_in_minutes: 60
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
@@ -117,7 +109,22 @@ steps:
       JEST_CONFIGS_DEPS: 'check_types'
       FTR_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/ftr_configs.sh'
       FTR_CONFIGS_DEPS: 'build,check_types'
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
+    retry:
+      automatic:
+        - exit_status: '*'
+          limit: 1
+
+  - command: .buildkite/scripts/steps/test/scout_test_run_builder.sh
+    label: 'Scout Test Run Builder'
+    agents:
+      machineType: n2-standard-4
+    key: build_scout_tests
+    timeout_in_minutes: 20
+    depends_on:
+      - build
+      - check_types
+    env:
+      SCOUT_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/scout_configs.sh'
     retry:
       automatic:
         - exit_status: '*'
@@ -127,10 +134,7 @@ steps:
     label: Mark CI Stats as ready
     agents:
       machineType: n2-standard-2
-      diskSizeGb: 115
     timeout_in_minutes: 10
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     depends_on:
       - build
       - build_api_docs
@@ -144,7 +148,8 @@ steps:
     agents:
       machineType: n2-highmem-4
       preemptible: true
-      diskSizeGb: 115
+      spotZones: us-central1-f,us-central1-c,us-central1-a
+      diskSizeGb: 105
     key: build_api_docs
     depends_on:
       - build
@@ -154,8 +159,6 @@ steps:
       - quick_checks
       - check_oas_snapshot
     timeout_in_minutes: 90
-    env:
-      KIBANA_CI_PIPELINE_TYPE: 'faster_pr_build'
     retry:
       automatic:
         - exit_status: '-1'
