--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -1,30 +1,9 @@
 steps:
-  - command: .buildkite/scripts/lifecycle/pre_build.sh
-    label: Pre-Build
-    timeout_in_minutes: 10
-    id: pre_build
-    agents:
-      machineType: n2-standard-2
-
-  - wait
-
-  - command: .buildkite/scripts/steps/store_cache.sh
-    label: Store Cache for build
-    timeout_in_minutes: 10
-    id: store_cache
-    soft_fail: true
-    depends_on:
-      - terrazzo-initial-pipeline-upload
-    agents:
-      machineType: n2-standard-2
-      diskSizeGb: 95
-
   - command: .buildkite/scripts/steps/build_kibana.sh
     label: Build Kibana Distribution
     agents:
-      machineType: n2-standard-8
-      preemptible: true
-      spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      machineType: c3d-standard-16-lssd
+      zones: northamerica-northeast2-b,us-central1-c,us-central1-a
       diskSizeGb: 200
     key: build
     if: "build.env('KIBANA_BUILD_ID') == null || build.env('KIBANA_BUILD_ID') == ''"
@@ -66,8 +45,8 @@ steps:
     label: 'Linting'
     agents:
       machineType: n2-standard-16
-      preemptible: true
       spotZones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      preemptible: true
       diskSizeGb: 105
     key: linting
     timeout_in_minutes: 60
@@ -118,7 +97,38 @@ steps:
         - exit_status: '-1'
           limit: 3
 
-  - wait
+  - command: .buildkite/scripts/steps/test/pick_test_group_run_order.sh
+    label: 'Pick Test Group Run Order'
+    agents:
+      machineType: n2-standard-2
+      diskSizeGb: 115
+    timeout_in_minutes: 10
+    env:
+      JEST_UNIT_SCRIPT: '.buildkite/scripts/steps/test/jest.sh'
+      JEST_INTEGRATION_SCRIPT: '.buildkite/scripts/steps/test/jest_integration.sh'
+      JEST_CONFIGS_DEPS: 'check_types'
+      FTR_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/ftr_configs.sh'
+      FTR_CONFIGS_DEPS: 'build,check_types'
+    retry:
+      automatic:
+        - exit_status: '*'
+          limit: 1
+
+  - command: .buildkite/scripts/steps/test/scout_test_run_builder.sh
+    label: 'Scout Test Run Builder'
+    agents:
+      machineType: n2-standard-4
+    key: build_scout_tests
+    timeout_in_minutes: 20
+    depends_on:
+      - build
+      - check_types
+    env:
+      SCOUT_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/scout_configs.sh'
+    retry:
+      automatic:
+        - exit_status: '*'
+          limit: 1
 
   - command: .buildkite/scripts/steps/ci_stats_ready.sh
     label: Mark CI Stats as ready
@@ -141,6 +151,13 @@ steps:
       spotZones: us-central1-f,us-central1-c,us-central1-a
       diskSizeGb: 105
     key: build_api_docs
+    depends_on:
+      - build
+      - check_types
+      - linting
+      - linting_with_types
+      - quick_checks
+      - check_oas_snapshot
     timeout_in_minutes: 90
     retry:
       automatic:
