[@kbn/dashboard-plugin] Migrate Dashboard's CRUD API tests from FTR to Scout (#251163)
## Summary

Migrates the Dashboard plugin's CRUD API integration tests from FTR to
the Scout framework. All 19 test cases have been successfully migrated
with full coverage parity, using least-privileged roles (`viewer` for
read operations, `editor` for write operations) and the new `expect`
import from `@kbn/scout/api`.

- Migrated tests for: create, get, update, delete, and search dashboard
endpoints
- Added OAS schema validation test (enabled `server.oas.enabled=true` in
Scout base config)
- Used appropriate roles: `viewer` for GET/search tests, `editor` for
POST/PUT/DELETE tests
- Organized test fixtures in dedicated `fixtures/` directory with shared
constants and archives
- Removed FTR tests from
`src/platform/test/api_integration/apis/dashboards/`
- Added `dashboard` to `.buildkite/scout_ci_config.yml`
- Updated `.github/CODEOWNERS` to remove old FTR test path
- All 19 tests passing with ESLint and TypeScript checks clean

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>

--- a/.buildkite/scout_ci_config.yml
+++ b/.buildkite/scout_ci_config.yml
@@ -3,6 +3,7 @@ plugins:
   enabled:
     - apm
     - console
+    - dashboard
     - cloud_security_posture
     - discover_enhanced
     - entity_store
