--- a/src/platform/plugins/shared/dashboard/moon.yml
+++ b/src/platform/plugins/shared/dashboard/moon.yml
@@ -115,6 +115,7 @@ dependsOn:
   - '@kbn/core-chrome-app-menu-components'
   - '@kbn/core-chrome-app-menu'
   - '@kbn/test-jest-helpers'
+  - '@kbn/scout'
   - '@kbn/image-embeddable-plugin'
 tags:
   - plugin
@@ -130,6 +131,8 @@ fileGroups:
     - public/**/*
     - server/**/*
     - test/scout/**/*
+    - test/scout_oas_schema/**/*
+    - test/scout_oas_schema/**/*.json
     - '!target/**/*'
 tasks:
   jest:
