[@kbn/dashboard-plugin] Migrate Dashboard's CRUD API tests from FTR to Scout (#251163)
## Summary

Migrates the Dashboard plugin's CRUD API integration tests from FTR to
the Scout framework. All 19 test cases have been successfully migrated
with full coverage parity, using least-privileged roles (`viewer` for
read operations, `editor` for write operations) and the new `expect`
import from `@kbn/scout/api`.

- Migrated tests for: create, get, update, delete, and search dashboard
endpoints
- Added OAS schema validation test (enabled `server.oas.enabled=true` in
Scout base config)
- Used appropriate roles: `viewer` for GET/search tests, `editor` for
POST/PUT/DELETE tests
- Organized test fixtures in dedicated `fixtures/` directory with shared
constants and archives
- Removed FTR tests from
`src/platform/test/api_integration/apis/dashboards/`
- Added `dashboard` to `.buildkite/scout_ci_config.yml`
- Updated `.github/CODEOWNERS` to remove old FTR test path
- All 19 tests passing with ESLint and TypeScript checks clean

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>
(cherry picked from commit 17fdeed1d2406dde0edfc3097658700a9a3ef324)

# Conflicts:
#	.buildkite/scout_ci_config.yml
#	.github/CODEOWNERS
#	src/platform/plugins/shared/dashboard/moon.yml
#	src/platform/plugins/shared/dashboard/test/scout/api/fixtures/index.ts
#	src/platform/plugins/shared/dashboard/test/scout_oas_schema/api/fixtures/schema_snapshot.json
#	src/platform/plugins/shared/dashboard/tsconfig.json
#	src/platform/test/api_integration/apis/dashboards/create_dashboard/index.ts
#	src/platform/test/api_integration/apis/dashboards/create_dashboard/main.ts
#	src/platform/test/api_integration/apis/dashboards/create_dashboard/validation.ts
#	src/platform/test/api_integration/apis/dashboards/delete_dashboard/index.ts
#	src/platform/test/api_integration/apis/dashboards/delete_dashboard/main.ts
#	src/platform/test/api_integration/apis/dashboards/get_dashboard/index.ts
#	

--- a/src/platform/plugins/shared/dashboard/moon.yml
+++ b/src/platform/plugins/shared/dashboard/moon.yml
@@ -115,6 +115,8 @@ fileGroups:
     - public/**/*
     - server/**/*
     - test/scout/**/*
+    - test/scout_oas_schema/**/*
+    - test/scout_oas_schema/**/*.json
     - '!target/**/*'
 tasks:
   jest:
