[@kbn/dashboard-plugin] Migrate Dashboard's CRUD API tests from FTR to Scout (#251163)
## Summary

Migrates the Dashboard plugin's CRUD API integration tests from FTR to
the Scout framework. All 19 test cases have been successfully migrated
with full coverage parity, using least-privileged roles (`viewer` for
read operations, `editor` for write operations) and the new `expect`
import from `@kbn/scout/api`.

- Migrated tests for: create, get, update, delete, and search dashboard
endpoints
- Added OAS schema validation test (enabled `server.oas.enabled=true` in
Scout base config)
- Used appropriate roles: `viewer` for GET/search tests, `editor` for
POST/PUT/DELETE tests
- Organized test fixtures in dedicated `fixtures/` directory with shared
constants and archives
- Removed FTR tests from
`src/platform/test/api_integration/apis/dashboards/`
- Added `dashboard` to `.buildkite/scout_ci_config.yml`
- Updated `.github/CODEOWNERS` to remove old FTR test path
- All 19 tests passing with ESLint and TypeScript checks clean

---------

Co-authored-by: kibanamachine <42973632+kibanamachine@users.noreply.github.com>
(cherry picked from commit 17fdeed1d2406dde0edfc3097658700a9a3ef324)

# Conflicts:
#	.buildkite/scout_ci_config.yml
#	src/platform/plugins/shared/dashboard/moon.yml
#	src/platform/plugins/shared/dashboard/tsconfig.json

--- a/src/platform/plugins/shared/dashboard/tsconfig.json
+++ b/src/platform/plugins/shared/dashboard/tsconfig.json
@@ -9,6 +9,9 @@
     "common/**/*",
     "public/**/*",
     "server/**/*",
+    "test/scout/**/*",
+    "test/scout_oas_schema/**/*",
+    "test/scout_oas_schema/**/*.json"
   ],
   "kbn_references": [
     "@kbn/core",
@@ -102,7 +105,8 @@
     "@kbn/react-query",
     "@kbn/core-http-server",
     "@kbn/core-chrome-layout-utils",
-    "@kbn/cps"
+    "@kbn/cps",
+    "@kbn/scout"
   ],
   "exclude": ["target/**/*"]
 }
