--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -54,9 +54,9 @@ steps:
     label: 'Checks'
     key: checks
     agents:
-      machineType: n4d-standard-4
+      machineType: n2d-standard-4
       preemptible: true
-      spotZones: us-central1-c,us-central1-a
+      spotZones: us-central1-f,us-central1-c,us-central1-a
       diskSizeGb: 105
     timeout_in_minutes: 60
     retry:
@@ -67,9 +67,9 @@ steps:
   - command: .buildkite/scripts/steps/lint.sh
     label: 'Linting'
     agents:
-      machineType: n4d-standard-32
+      machineType: n2d-standard-32
       preemptible: true
-      spotZones: us-central1-c,us-central1-a
+      spotZones: us-central1-f,us-central1-c,us-central1-a
       diskSizeGb: 105
     key: linting
     timeout_in_minutes: 60
@@ -81,9 +81,9 @@ steps:
   - command: .buildkite/scripts/steps/lint_with_types.sh
     label: 'Linting (with types)'
     agents:
-      machineType: n4d-standard-32
+      machineType: n2d-standard-32
       preemptible: true
-      spotZones: us-central1-c,us-central1-a
+      spotZones: us-central1-f,us-central1-c,us-central1-a
       diskSizeGb: 105
     key: linting_with_types
     timeout_in_minutes: 60
