[Buildkite] Improve early-start: gate-key check in TS, remove Jest build dep
- Move gate-key check from bash case statement into the TS cancellation
  script, using PR_CI_GATE_KEYS as the single source of truth
- Expand post_command.sh comment to explain the early-start purpose
- Remove unnecessary build dependency for Jest in pick_test_groups.yml
  so Jest steps can start immediately without waiting for the Kibana
  distribution build

--- a/.buildkite/pipelines/pull_request/pick_test_groups.yml
+++ b/.buildkite/pipelines/pull_request/pick_test_groups.yml
@@ -8,6 +8,7 @@ steps:
     env:
       JEST_UNIT_SCRIPT: '.buildkite/scripts/steps/test/jest.sh'
       JEST_INTEGRATION_SCRIPT: '.buildkite/scripts/steps/test/jest_integration.sh'
+      JEST_CONFIGS_DEPS: ''
       FTR_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/ftr_configs.sh'
     retry:
       automatic:
