--- a/.buildkite/pipelines/pull_request/base_merged_phases.yml
+++ b/.buildkite/pipelines/pull_request/base_merged_phases.yml
@@ -2,8 +2,10 @@ steps:
   - command: .buildkite/scripts/steps/build_kibana.sh
     label: Build Kibana Distribution
     agents:
-      machineType: c3d-standard-16-lssd
-      zones: northamerica-northeast2-b,us-central1-c,us-central1-a
+      machineType: n4d-standard-16
+      diskType: hyperdisk-balanced
+      zones: us-central1-c,us-central1-a
+      diskSizeGb: 200
     key: build
     if: "build.env('KIBANA_BUILD_ID') == null || build.env('KIBANA_BUILD_ID') == ''"
     timeout_in_minutes: 90
