ci: Use k8s provider for lightweight PR pipeline steps
Switch Pre-Build and Mark CI Stats as ready steps to the k8s provider
to cut down on time waiting for a GCP VM to provision. These steps only
make API calls and don't need full VM resources.

--- a/.buildkite/pipelines/pull_request/base.yml
+++ b/.buildkite/pipelines/pull_request/base.yml
@@ -4,7 +4,8 @@ steps:
     timeout_in_minutes: 10
     id: pre_build
     agents:
-      machineType: n2-standard-2
+      provider: k8s
+      image: family/kibana-ubuntu-2404
 
   - wait
 
@@ -123,7 +124,8 @@ steps:
   - command: .buildkite/scripts/steps/ci_stats_ready.sh
     label: Mark CI Stats as ready
     agents:
-      machineType: n2-standard-2
+      provider: k8s
+      image: family/kibana-ubuntu-2404
     timeout_in_minutes: 10
     depends_on:
       - build
