--- a/.buildkite/pipelines/pull_request/scout_tests.yml
+++ b/.buildkite/pipelines/pull_request/scout_tests.yml
@@ -1,20 +1,25 @@
 steps:
-  - command: .buildkite/scripts/steps/test/scout_test_run_builder.sh
-    label: 'Scout Test Run Builder'
+  - command: .buildkite/scripts/steps/test/scout_test_config_discovery.sh
+    label: 'Scout Test Config Discovery'
+    agents:
+      machineType: n2-standard-2
+    key: build_scout_tests
+    timeout_in_minutes: 15
+    env:
+      SCOUT_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/scout_configs.sh'
+    retry:
+      automatic:
+        - exit_status: '*'
+          limit: 1
+
+  - command: .buildkite/scripts/steps/test/scout_test_run_builder_tests.sh
+    label: 'Scout API & EUI Tests'
     agents:
       machineType: n2-standard-4
-    key: build_scout_tests
+    key: scout_api_eui_tests
     timeout_in_minutes: 15
     depends_on:
       - build
-      - quick_checks
-      - checks
-      - linting
-      - linting_with_types
-      - check_types
-      - check_oas_snapshot
-    env:
-      SCOUT_CONFIGS_SCRIPT: '.buildkite/scripts/steps/test/scout_configs.sh'
     retry:
       automatic:
         - exit_status: '*'
