--- a/package.json
+++ b/package.json
@@ -1557,6 +1557,7 @@
     "@kbn/ambient-ftr-types": "link:src/platform/packages/private/kbn-ambient-ftr-types",
     "@kbn/ambient-storybook-types": "link:src/platform/packages/shared/kbn-ambient-storybook-types",
     "@kbn/ambient-ui-types": "link:src/platform/packages/shared/kbn-ambient-ui-types",
+    "@kbn/api-contracts": "link:packages/kbn-api-contracts",
     "@kbn/apm-ftr-e2e": "link:x-pack/solutions/observability/plugins/apm/ftr_e2e",
     "@kbn/axe-config": "link:src/platform/packages/shared/kbn-axe-config",
     "@kbn/babel-preset": "link:packages/kbn-babel-preset",
