--- a/package.json
+++ b/package.json
@@ -92,6 +92,9 @@
     "**/hoist-non-react-statics": "3.3.2",
     "**/isomorphic-fetch/node-fetch": "2.7.0",
     "**/langchain": "0.3.35",
+    "**/playwright": "1.58.2",
+    "**/playwright-chromium": "1.58.2",
+    "**/playwright-core": "1.58.2",
     "**/remark-parse/trim": "1.0.1",
     "**/sharp": "0.34.5",
     "**/typescript": "5.9.3",
@@ -1788,7 +1791,7 @@
     "@mswjs/http-middleware": "0.10.3",
     "@octokit/rest": "22.0.1",
     "@parcel/watcher": "2.5.1",
-    "@playwright/test": "1.58.0",
+    "@playwright/test": "1.58.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.6.1",
     "@redocly/cli": "2.14.3",
     "@statoscope/webpack-plugin": "5.28.2",
@@ -2064,7 +2067,7 @@
     "picomatch": "4.0.3",
     "pirates": "4.0.7",
     "pixelmatch": "7.1.0",
-    "playwright": "1.58.0",
+    "playwright": "1.58.2",
     "pngjs": "7.0.0",
     "postcss": "8.5.6",
     "postcss-loader": "8.2.0",
